Change scale of x-axis.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -12,7 +12,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,12 +302,12 @@
     "settings = Settings()\n",
     "originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
     "data = create_binned_dataframe(\n",
-    "    simulations=originals, rxy_range=(1, 200), n_bins=199)"
+    "    simulations=originals, rxy_range=(0, 30), n_bins=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,12 +332,10 @@
     "    for ax in axs.flat:\n",
     "        ax.grid(False)\n",
     "        ax.tick_params(which='both', direction=\"in\")\n",
-    "        ax.set_xlim(1, 200)\n",
+    "        ax.set_xlim(0, 30)\n",
     "        ax.set_ylim(-100, 350)\n",
-    "        ax.set_xscale('log')\n",
-    "        ax.set_xticks([1, 10, 100])\n",
+    "        ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
     "        ax.set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
-    "        ax.set_xticklabels([1, 10, 100])\n",
     "        ax.set_xlabel(r'$r_{xy}$ [ckpc]')\n",
     "        ax.set_ylabel(r'Velocity [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
     "        ax.label_outer()\n",
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,20 +385,20 @@
     "for simulation in originals:\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"][\n",
-    "            data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"] < 0.1\n",
-    "        ] = np.nan"
+    "            data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"] \\\n",
+    "                < 0.1] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:55: RuntimeWarning: Mean of empty slice\n"
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/ipykernel_launcher.py:53: RuntimeWarning: Mean of empty slice\n"
      ]
     }
    ],
@@ -402,12 +410,10 @@
     "for ax in axs.flat:\n",
     "    ax.grid(False)\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(1, 80)\n",
+    "    ax.set_xlim(0, 30)\n",
     "    ax.set_ylim(-100, 350)\n",
-    "    ax.set_xscale('log')\n",
-    "    ax.set_xticks([1, 5, 10, 50])\n",
+    "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
     "    ax.set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
-    "    ax.set_xticklabels([1, 5, 10, 50])\n",
     "    ax.set_xlabel(r'$r_{xy}$ [ckpc]')\n",
     "    ax.label_outer()\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
