--- a/scripts/Radial Distribution of Stars.ipynb
+++ b/scripts/Radial Distribution of Stars.ipynb
@@ -12,7 +12,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +172,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(7.2, 7.2))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flat:\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_yscale(\"log\")\n",
+    "    ax.set_ylim(1E2, 1E6)\n",
+    "    ax.set_xlim(0, 100)\n",
+    "    ax.set_xticks([10, 30, 50, 70, 90])\n",
+    "    ax.set_yticks([1E3, 1E4, 1E5])\n",
+    "    ax.set_xlabel(r\"$r_{xy}$ [ckpc]\")\n",
+    "    ax.set_ylabel(r\"$N$\")\n",
+    "    ax.label_outer()\n",
+    "\n",
+    "for i, simulation in enumerate(simulations):\n",
+    "    current_ax = axs.flatten()[i]\n",
+    "    current_ax.text(\n",
+    "        x=0.05, y=0.95, size=6.0,\n",
+    "        s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "        ha=\"left\", va=\"top\", transform=current_ax.transAxes)\n",
+    "    for component in settings.components:\n",
+    "        current_ax.plot(\n",
+    "            df[\"BinCenters_ckpc\"],\n",
+    "            df[f\"{simulation}_StarCount_{component}\"],\n",
+    "            color=settings.component_colors[component],\n",
+    "            label=settings.component_labels[component])\n",
+    "\n",
+    "axs[0, 0].legend(loc=\"center right\", framealpha=0, fontsize=5.0)\n",
+    "\n",
+    "fig.savefig(\n",
+    "    f\"../images/galaxy_decomposition/distribution_of_particles.pdf\")\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
