Change figure style and add new runs.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -425,10 +415,10 @@
     "\n",
     "for simulation in originals:\n",
     "    c, label, zorder, lw = \"silver\", None, 10, 0.75\n",
-    "    if simulation == \"au11_or_l4_s127\":\n",
-    "        c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
-    "        lw = 1.25\n",
-    "    elif simulation == \"au6_or_l4_s127\":\n",
+    "    # if simulation == \"au11_or_l4_s127\":\n",
+    "    #     c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
+    "    #     lw = 1.25\n",
+    "    if simulation == \"au6_or_l4_s127\":\n",
     "        c, label, zorder = \"tab:green\", r\"$\\texttt{AU6_OR_L4_S127}$\", 12\n",
     "        lw = 1.25\n",
     "    for component, idx in settings.component_tags.items():\n",
@@ -458,7 +448,7 @@
     "                    for simulation in originals]], axis=1),\n",
     "            lw=1.25, zorder=15, c='k', label=\"Average\")\n",
     "\n",
-    "axs[1, 0].legend(loc=\"upper right\", framealpha=0, fontsize=8.0)\n",
+    "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=6.0)\n",
     "\n",
     "fig.savefig(f\"../images/stellar_velocities_by_region/originals_average.pdf\")\n",
     "plt.close(fig)"
