--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -94,8 +94,7 @@
     "    tuple\n",
     "        The properties.\n",
     "    \"\"\"\n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[4])\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[4])\n",
     "    s.add_stellar_age()\n",
     "    s.add_metal_abundance(of=\"Fe\", to=\"H\")\n",
     "\n",
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +126,19 @@
     "    tuple\n",
     "        The properties.\n",
     "    \"\"\"\n",
+    "    settings = Settings()\n",
+    "\n",
     "    s = Snapshot(simulation=simulation,\n",
     "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_stellar_age()\n",
     "    s.add_circularity()\n",
     "    s.add_reference_to_potential()\n",
     "    s.add_normalized_potential()\n",
-    "    s.tag_particles_by_region(disc_std_circ=1.0,\n",
-    "                              disc_min_circ=0.4,\n",
-    "                              cold_disc_delta_circ=0.25,\n",
-    "                              bulge_max_specific_energy=-0.75)\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=settings.disc_std_circ,\n",
+    "        disc_min_circ=settings.disc_min_circ,\n",
+    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
+    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
     "    s.add_metal_abundance(of=\"Fe\", to=\"H\")\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,9 +376,6 @@
     "        ax.set_ylabel(\"[Fe/H]\")\n",
     "        ax.label_outer()\n",
     "\n",
-    "    print(\"MEDIAN DATA\")\n",
-    "    print(\"===========\")\n",
-    "\n",
     "    age, metal_ab, region_tag = read_data_with_region(simulation=simulation)\n",
     "    for idx, tag in enumerate(np.unique(region_tag)):\n",
     "        is_region = (region_tag == tag)\n",
@@ -396,11 +395,6 @@
     "                      size=8.0, transform=axs[idx].transAxes,\n",
     "                      ha='left', va='bottom',\n",
     "                      )\n",
-    "\n",
-    "        print(\"\")\n",
-    "        print(f\"{settings.component_labels[settings.components[idx]]}\")\n",
-    "        print(f\"[Fe/H]: {np.nanmedian(metal_ab[is_region])}\")\n",
-    "        print(f\"Age [Gyr]: {np.nanmedian(age[is_region])}\")\n",
     "\n",
     "        axs[idx].plot(axs[idx].get_xlim(),\n",
     "                      [np.nanmedian(metal_ab[is_region]),\n",
