--- a/scripts/Age Metallicity Relation.ipynb
+++ b/scripts/Age Metallicity Relation.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,18 +394,18 @@
     "\n",
     "axs[0].text(x=axs[0].get_xlim()[0],\n",
     "            y=axs[0].get_ylim()[1],\n",
-    "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "            s=r\"$\\texttt{\" + SIMULATION.upper() + \"}$\",\n",
     "            size=8.0,\n",
     "            ha='left', va='bottom',\n",
     "            )\n",
     "\n",
-    "fig.savefig(f\"../images/age_metallicity_by_region/{SIMULATION}.pdf\")\n",
+    "fig.savefig(f\"../images/age_metallicity_by_region/{SIMULATION}_05.pdf\")\n",
     "plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
