--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -12,11 +12,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
     "from auriga.paths import Paths\n",
@@ -26,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +71,18 @@
     "    tuple\n",
     "        The properties.\n",
     "    \"\"\"\n",
+    "    settings = Settings()\n",
+    "    \n",
     "    s = Snapshot(simulation=simulation,\n",
     "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.add_circularity()\n",
     "    s.add_reference_to_potential()\n",
     "    s.add_normalized_potential()\n",
-    "    s.tag_particles_by_region(disc_std_circ=1.0,\n",
-    "                              disc_min_circ=0.4,\n",
-    "                              cold_disc_delta_circ=0.25,\n",
-    "                              bulge_max_specific_energy=-0.75)\n",
+    "    s.tag_particles_by_region(\n",
+    "        disc_std_circ=settings.disc_std_circ,\n",
+    "        disc_min_circ=settings.disc_min_circ,\n",
+    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
+    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
     "    s.add_stellar_origin()\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -74,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +276,13 @@
     "            ha='left', va='bottom',\n",
     "            )\n",
     "\n",
-    "    for ext in [\"pdf\", \"png\"]:\n",
-    "        fig.savefig(f\"../images/stellar_origin_by_region/{simulation}.{ext}\")\n",
+    "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
