Add new figures.

--- a/scripts/FeH Metallicity Profiles by Region.ipynb
+++ b/scripts/FeH Metallicity Profiles by Region.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +96,14 @@
     "    df[\"[Fe/H]\"] = s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj]\n",
     "    df[\"r_xy\"] = s.rho[is_real_star & is_main_obj]\n",
     "    df[\"RegTag\"] = s.region_tag[is_real_star & is_main_obj]\n",
+    "    df[\"r_ckpc\"] = s.r[is_real_star & is_main_obj]\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
