Refactor notebook and output data.

--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -10,41 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
-    "from auriga.paths import Paths\n",
-    "from auriga.parser import parse\n",
     "from auriga.settings import Settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,75 +42,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str) -> tuple:\n",
-    "    \"\"\"\n",
-    "    Read the properties of interest for this analysis.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    simulation : str\n",
-    "        The simulation to consider.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    tuple\n",
-    "        The properties.\n",
-    "    \"\"\"\n",
+    "settings = Settings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(simulation: str) -> pd.DataFrame:\n",
     "    settings = Settings()\n",
     "    \n",
-    "    s = Snapshot(simulation=simulation,\n",
-    "                 loadonlytype=[0, 1, 2, 3, 4, 5])\n",
-    "    s.add_circularity()\n",
-    "    s.add_reference_to_potential()\n",
-    "    s.add_normalized_potential()\n",
+    "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
     "        disc_std_circ=settings.disc_std_circ,\n",
     "        disc_min_circ=settings.disc_min_circ,\n",
     "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
     "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
-    "    s.add_stellar_origin()\n",
+    "    s.tag_in_situ_stars()\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
     "\n",
-    "    return (s.stellar_origin_idx[is_real_star & is_main_obj],\n",
-    "            s.region_tag[is_real_star & is_main_obj],\n",
-    "            s.stellar_formation_snapshot[is_real_star & is_main_obj])"
+    "    df = pd.DataFrame({\n",
+    "        \"RegionTag\": s.region_tag[is_real_star & is_main_obj],\n",
+    "        \"IsInSitu\": s.is_in_situ[is_real_star & is_main_obj],\n",
+    "        })\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_data(stellar_origin_idx: np.ndarray,\n",
-    "                 region_tag: np.ndarray,\n",
-    "                 stellar_formation_snapshot: np.ndarray,\n",
-    "                 main_halo_idxs: np.ndarray,\n",
-    "                 main_subhalo_idxs: np.ndarray,\n",
-    "                 ) -> tuple:\n",
+    "def prepare_data(df: pd.DataFrame) -> tuple:\n",
     "    \"\"\"\n",
-    "    This method takes the halo/subhalo index of birth for the stars and the\n",
-    "    region tag and returns a tuple with the ordered values of in-situ\n",
-    "    stellar percentages, labels and colors.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    stellar_origin_idx : np.ndarray\n",
-    "        The halo/subhalo index of birth for the stars.\n",
-    "    region_tag : np.ndarray\n",
-    "        The region tag.\n",
-    "    stellar_formation_snapshot : np.ndarray\n",
-    "        The snapshot at which each star was born.\n",
-    "    main_halo_idxs : np.ndarray\n",
-    "        The indices of the main halo.\n",
-    "    main_subhalo_idxs : np.ndarray\n",
-    "        The indices of the main subhalo.\n",
+    "    This method takes a data frame with stellar information and returns a\n",
+    "    tuple with the ordered values of in-situ stellar percentages, labels and\n",
+    "    colors.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -133,70 +99,10 @@
     "\n",
     "    # Bar widths\n",
     "    bar_widths = np.zeros(len(settings.components) + 1)\n",
-    "    for i in range(len(main_halo_idxs)):\n",
-    "        is_born_here = stellar_formation_snapshot == i\n",
-    "        # All galaxy stars\n",
-    "        bar_widths[0] += (\n",
-    "            (stellar_origin_idx[is_born_here, 0] \\\n",
-    "                == main_halo_idxs[i]) \\\n",
-    "            & (stellar_origin_idx[is_born_here, 1] \\\n",
-    "                == main_subhalo_idxs[i])).sum()\n",
-    "\n",
-    "        # Halo stars\n",
-    "        is_region = region_tag == 0\n",
-    "        bar_widths[1] += (\n",
-    "            (stellar_origin_idx[is_region & is_born_here, 0] \\\n",
-    "                == main_halo_idxs[i]) \\\n",
-    "            & (stellar_origin_idx[is_region & is_born_here, 1] \\\n",
-    "                == main_subhalo_idxs[i])).sum()\n",
-    "\n",
-    "        # Bulge stars\n",
-    "        is_region = region_tag == 1\n",
-    "        bar_widths[2] += (\n",
-    "            (stellar_origin_idx[is_region & is_born_here, 0] \\\n",
-    "                == main_halo_idxs[i]) \\\n",
-    "            & (stellar_origin_idx[is_region & is_born_here, 1] \\\n",
-    "                == main_subhalo_idxs[i])).sum()\n",
-    "\n",
-    "        # Cold disc stars\n",
-    "        is_region = region_tag == 2\n",
-    "        bar_widths[3] += (\n",
-    "            (stellar_origin_idx[is_region & is_born_here, 0] \\\n",
-    "                == main_halo_idxs[i]) \\\n",
-    "            & (stellar_origin_idx[is_region & is_born_here, 1] \\\n",
-    "                == main_subhalo_idxs[i])).sum()\n",
-    "\n",
-    "        # Warm disc stars\n",
-    "        is_region = region_tag == 3\n",
-    "        bar_widths[4] += (\n",
-    "            (stellar_origin_idx[is_region & is_born_here, 0] \\\n",
-    "                == main_halo_idxs[i]) \\\n",
-    "            & (stellar_origin_idx[is_region & is_born_here, 1] \\\n",
-    "                == main_subhalo_idxs[i])).sum()\n",
-    "\n",
-    "    # Normalize by the stars in each region\n",
-    "    bar_widths[0] /= stellar_origin_idx.shape[0]\n",
-    "    bar_widths[1] /= stellar_origin_idx[region_tag == 0].shape[0]\n",
-    "    bar_widths[2] /= stellar_origin_idx[region_tag == 1].shape[0]\n",
-    "    bar_widths[3] /= stellar_origin_idx[region_tag == 2].shape[0]\n",
-    "    bar_widths[4] /= stellar_origin_idx[region_tag == 3].shape[0]\n",
-    "\n",
-    "    # bar_widths = np.array(\n",
-    "    #     [((stellar_origin_idx[:, 0] == 0)\n",
-    "    #     & (stellar_origin_idx[:, 1] == 0)).sum() / stellar_origin_idx.shape[0],\n",
-    "    #     ((stellar_origin_idx[region_tag == 0, 0] == 0)\n",
-    "    #     & (stellar_origin_idx[region_tag == 0, 1] == 0)).sum() / \\\n",
-    "    #         stellar_origin_idx[region_tag == 0].shape[0],\n",
-    "    #     ((stellar_origin_idx[region_tag == 1, 0] == 0)\n",
-    "    #     & (stellar_origin_idx[region_tag == 1, 1] == 0)).sum() / \\\n",
-    "    #         stellar_origin_idx[region_tag == 1].shape[0],\n",
-    "    #     ((stellar_origin_idx[region_tag == 2, 0] == 0)\n",
-    "    #     & (stellar_origin_idx[region_tag == 2, 1] == 0)).sum() / \\\n",
-    "    #         stellar_origin_idx[region_tag == 2].shape[0],\n",
-    "    #     ((stellar_origin_idx[region_tag == 3, 0] == 0)\n",
-    "    #     & (stellar_origin_idx[region_tag == 3, 1] == 0)).sum() / \\\n",
-    "    #         stellar_origin_idx[region_tag == 3].shape[0],\n",
-    "    #     ]) \n",
+    "    bar_widths[0] = df[\"IsInSitu\"].sum() / len(df)  # Galaxy\n",
+    "    for i in range(len(settings.components)):\n",
+    "        bar_widths[i + 1] = (df[\"IsInSitu\"][df[\"RegionTag\"] == i]).sum() \\\n",
+    "            / len(df[df[\"RegionTag\"] == i])\n",
     "\n",
     "    # Numerical labels\n",
     "    num_labels = np.array([\n",
@@ -212,40 +118,50 @@
     "    # Colors\n",
     "    colors = np.array([\"tab:gray\"] + list(settings.component_colors.values()))\n",
     "\n",
-    "    order_idx = np.argsort(bar_widths)\n",
+    "    order_idx = np.argsort(bar_widths)  # Order data\n",
+    "\n",
     "    return (bar_widths[order_idx], num_labels[order_idx],\n",
     "        labels[order_idx], colors[order_idx])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "for galaxy in settings.galaxies:\n",
+    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "    df = read_data(simulation)\n",
+    "    bar_widths, num_labels, labels, colors = prepare_data(df)\n",
+    "\n",
+    "    data[simulation] = {\n",
+    "        \"BarWidths\": list(bar_widths),\n",
+    "        \"NumericalLabels\": list(num_labels),\n",
+    "        \"ComponentLabel\": list(labels),\n",
+    "        \"Colors\": list(colors),\n",
+    "        }\n",
+    "\n",
+    "    # Sava data as json\n",
+    "    with open(\"../results/stellar_origin.json\", \"w\") as f:\n",
+    "        json.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_in_situ_plot_for_galaxy(simulation: str):\n",
-    "    \"\"\"\n",
-    "    This method creates a plot of the in-situ percentages for each\n",
-    "    galactic region.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    simulation : str\n",
-    "        The simulation to plot.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    galaxy, rerun, resolution, _ = parse(simulation=simulation)\n",
-    "    paths = Paths(galaxy=galaxy, rerun=rerun, resolution=resolution)\n",
-    "    df = pd.read_csv(f\"{paths.results_abs}/temporal_data.csv\",\n",
-    "                     usecols=[\"MainHaloIdx\", \"MainSubhaloIdx\"])\n",
-    "    stellar_origin_idx, region_tag, stellar_formation_snapshot = read_data(\n",
-    "        simulation=simulation)\n",
-    "    bar_widths, num_labels, labels, colors = prepare_data(\n",
-    "        stellar_origin_idx=stellar_origin_idx,\n",
-    "        region_tag=region_tag,\n",
-    "        stellar_formation_snapshot=stellar_formation_snapshot,\n",
-    "        main_halo_idxs=df[\"MainHaloIdx\"].to_numpy(),\n",
-    "        main_subhalo_idxs=df[\"MainSubhaloIdx\"].to_numpy())\n",
+    "    # Read data\n",
+    "    with open(\"../results/stellar_origin.json\") as f:\n",
+    "        data = json.load(f)[simulation]\n",
+    "        bar_widths = np.array(data[\"BarWidths\"])\n",
+    "        num_labels = data[\"NumericalLabels\"]\n",
+    "        labels = data[\"ComponentLabel\"]\n",
+    "        colors = data[\"Colors\"]\n",
     "\n",
     "    fig = plt.figure(figsize=(3.0, 2.5))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
@@ -253,7 +169,7 @@
     "\n",
     "    ax.label_outer()\n",
     "    ax.tick_params(which='both', direction=\"in\",\n",
-    "                bottom=False, top=False, left=False, right=False)\n",
+    "                   bottom=False, top=False, left=False, right=False)\n",
     "    ax.set_xlim(0, 100)\n",
     "    ax.set_xticks([0, 20, 40, 60, 80, 100])\n",
     "    ax.spines['top'].set_visible(False)\n",
@@ -269,11 +185,9 @@
     "    ax.set_yticks(np.arange(bar_widths.shape[0]), labels=labels)\n",
     "    ax.set_xlabel('In-Situ Star Percentage')\n",
     "\n",
-    "    ax.text(x=ax.get_xlim()[0],\n",
-    "            y=ax.get_ylim()[1],\n",
+    "    ax.text(x=ax.get_xlim()[0], y=ax.get_ylim()[1],\n",
     "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
-    "            size=8.0,\n",
-    "            ha='left', va='bottom',\n",
+    "            size=8.0, ha='left', va='bottom',\n",
     "            )\n",
     "\n",
     "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}.pdf\")\n",
@@ -282,16 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create plots for all galaxies\n",
-    "settings = Settings()\n",
     "for i in settings.galaxies:\n",
-    "    create_in_situ_plot_for_galaxy(simulation=f\"au{i}_or_l4_s127\")\n",
-    "    if i in settings.reruns:\n",
-    "        create_in_situ_plot_for_galaxy(simulation=f\"au{i}_re_l4_s251\")"
+    "    create_in_situ_plot_for_galaxy(simulation=f\"au{i}_or_l4_s127\")"
    ]
   }
  ],
